--- a/archivo.html
+++ b/archivo.html
@@ -1,48 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de Versiones</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Historial de Versiones del Proyecto</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Versión</th>
-                <th>Fecha</th>
-                <th>Descripción</th>
-                <th>Responsable</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>V1</td>
-                <td>15/01/2026</td>
-                <td>Estructuras básica HTML y CSS</td>
-                <td>Alice</td>
-            </tr>
-            <tr>
-                <td>V2</td>
-                <td>16/01/2026</td>
-                <td>Añadido header y menú de navegación</td>
-                <td>Bob</td>
-            </tr>
-            <tr>
-                <td>V3</td>
-                <td>17/01/2026</td>
-                <td>Sección principal y estilos CSS</td>
-                <td>Alice</td>
-            </tr>
-            <tr>
-                <td>V4</td>
-                <td>18/01/2026</td>
-                <td>Pie de página y enlaces</td>
-                <td>Bob</td>
-            </tr>
-        </tbody>
-    </table>
-</body>
-</html>
+<header>
+    <nav>
+        <a href="#">Inicio</a> |
+        <a href="#">Acerca</a> |
+        <a href="#">Contacto</a>
+    </nav>
+</header>
+<h1>Mi Proyecto Web - V2</h1>
