--- a/archivo.html
+++ b/archivo.html
@@ -1,8 +1,3 @@
-<header>
-    <nav>
-        <a href="#">Inicio</a> |
-        <a href="#">Acerca</a> |
-        <a href="#">Contacto</a>
-    </nav>
-</header>
-<h1>Mi Proyecto Web - V2</h1>
+<main>
+    <p>Bienvenido a mi proyecto web. Esta es la sección principal.</p>
+</main>
