commit NuevaVersion Nombre de la rama: NuevaVersion Autor: Raul <

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
         <input type="email" id="email" name="email"><br><br>
         <input type="submit" value="Enviar">
         <h1>Hola como estas</h1>
+        <h1>Hola como estas</h1>
+        <h1>Hola como estas</h1>
+        <h1>Hola como estas</h1>
     </form>
 </main>
